[tool.poetry]
name = "pubmed-parser-prem-warriors"
version = "0.1.0"
description = "A tool to fetch and parse PubMed papers."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"